--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,8 @@ website:
       - href: index.qmd
         text: Home
       - href: pubs.qmd
+      - href: _files/CV_11_14_22.pdf
+        text: CV
 
 format:
   html:
