--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,7 @@ website:
     background: primary
     left:
       - href: index.qmd
-        text: Home
+        text: About
       - href: pubs.qmd
       - href: _files/CV_11_14_22.pdf
         text: CV
